--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx webpack --config ./config/webpack.config.dev.js",
+    "build": "npx webpack --config ./config/webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -23,10 +24,12 @@
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.5",
     "toml": "^3.0.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0",
     "xml-loader": "^1.2.1",
     "yaml": "^2.1.1"
   },
